--- a/model-selection.ipynb
+++ b/model-selection.ipynb
@@ -52,14 +52,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: remove the nrows argument when done testing\n",
-    "#TODO: randomly select examples\n",
-    "df = pd.read_csv('database.csv', nrows=5000)[[\n",
+    "df = pd.read_csv('database.csv')[[\n",
     "    'NAME_CONTRACT_STATUS',\n",
     "    'CODE_GENDER',\n",
     "    'FLAG_OWN_CAR',\n",
     "    'FLAG_OWN_REALTY',\n",
-    "    'CNT_CHILDREN',\n",
     "    'AMT_INCOME_TOTAL',\n",
     "    'AMT_CREDIT',\n",
     "    'NAME_INCOME_TYPE',\n",
@@ -69,10 +66,22 @@
     "    'DAYS_BIRTH',\n",
     "    'DAYS_EMPLOYED',\n",
     "    'OCCUPATION_TYPE',\n",
-    "    'CNT_FAM_MEMBERS'\n",
+    "    'CNT_FAM_MEMBERS',\n",
+    "    'NAME_CLIENT_TYPE',\n",
+    "    'AMT_DOWN_PAYMENT',\n",
+    "    'NAME_TYPE_SUITE',\n",
+    "    'NAME_PAYMENT_TYPE'\n",
     "]]\n",
     "\n",
-    "df.head(10)"
+    "#drop rows with na values\n",
+    "df = df.dropna()\n",
+    "for col in df.columns:\n",
+    "    df = df[df[col]!='XNA'].reset_index(drop=True)\n",
+    "\n",
+    "#shuffle the dataframe\n",
+    "df = df.sample(frac=1).reset_index(drop=True)\n",
+    "\n",
+    "df.head(6)"
    ]
   },
   {
@@ -169,8 +178,10 @@
     "df_encoded = one_hot_encode(df_encoded, 'NAME_FAMILY_STATUS')\n",
     "df_encoded = one_hot_encode(df_encoded, 'NAME_HOUSING_TYPE')\n",
     "df_encoded = one_hot_encode(df_encoded, 'OCCUPATION_TYPE')\n",
-    "df_encoded = one_hot_encode(df_encoded, 'CNT_CHILDREN', prefix='CNT_CHILDREN_')\n",
-    "df_encoded = one_hot_encode(df_encoded, 'CNT_FAM_MEMBERS', prefix='CNT_CHILDREN_')\n",
+    "df_encoded = one_hot_encode(df_encoded, 'CNT_FAM_MEMBERS', prefix='CNT_FAM_MEM_')\n",
+    "df_encoded = one_hot_encode(df_encoded, 'NAME_CLIENT_TYPE')\n",
+    "df_encoded = one_hot_encode(df_encoded, 'NAME_TYPE_SUITE')\n",
+    "df_encoded = one_hot_encode(df_encoded, 'NAME_PAYMENT_TYPE')\n",
     "df_all_features = df_encoded\n",
     "\n",
     "#sanity check the dataframe before any work on it begins\n",
@@ -209,15 +220,14 @@
     "    'AMT_INCOME_TOTAL',\n",
     "    'AMT_CREDIT',\n",
     "    'DAYS_BIRTH',\n",
-    "    'DAYS_EMPLOYED'\n",
+    "    'DAYS_EMPLOYED',\n",
+    "    'AMT_DOWN_PAYMENT'\n",
     "]\n",
     "subframe = df_all_features[to_scale].copy()\n",
-    "scaler = preprocessing.StandardScaler().fit(subframe.values)\n",
+    "scaler = preprocessing.MinMaxScaler().fit(subframe.values)\n",
     "subframe = scaler.transform(subframe.values)\n",
     "df_all_features[to_scale] = subframe\n",
-    "df_final = df_all_features\n",
-    "\n",
-    "df_final.head(6)"
+    "df_final = df_all_features"
    ]
   },
   {
@@ -361,7 +371,10 @@
     "        prediction = self.get_best_prediction()\n",
     "        print(f'Mean prediction: {np.round(np.mean(np.array(prediction)), 2)}')\n",
     "        print(f'Training accuracy: {acc_train}')\n",
-    "        print(f'Best test accuracy: {acc_test}')"
+    "        print(f'Test accuracy: {acc_test}')\n",
+    "    \n",
+    "    def plot(self):\n",
+    "        pass"
    ]
   },
   {
@@ -383,17 +396,6 @@
   },
   {
    "source": [
-    "### Tests comparing linear kernel instantiations with different C values"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "svm_linear_tests = [\n",
     "    Test(\n",
     "        name=f'SVM linear with C of {i}',\n",
@@ -408,20 +410,13 @@
     "for test in svm_linear_tests:\n",
     "    test.run()\n",
     "    test.display()"
-   ]
-  },
-  {
-   "source": [
-    "### Tests comparing instantions of the RBF kernel with different C"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "svm_rbf_tests = [\n",
     "    Test(\n",
@@ -437,22 +432,13 @@
     "for test in svm_rbf_tests:\n",
     "    test.run()\n",
     "    test.display()"
-   ]
-  },
-  {
-   "source": [
-    "### Tests comparing different degrees of the polynomial kernel"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
    "source": [
     "pairs = []\n",
     "for degree in range(1,6):\n",
@@ -473,7 +459,13 @@
     "for test in svm_poly_tests:\n",
     "    test.run()\n",
     "    test.display()"
-   ]
+   ],
+   "cell_type": "code",
+   "metadata": {
+    "tags": []
+   },
+   "execution_count": null,
+   "outputs": []
   },
   {
    "source": [
@@ -568,20 +560,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn_basic_tests = [\n",
+    "nn_sgd_tests = [\n",
     "    Test(\n",
-    "        name='NN',\n",
+    "        name='NN using stochastic gradient descent and logistic activation with small ∆',\n",
     "        X=X,\n",
     "        y=y,\n",
     "        algorithm=MLPClassifier,\n",
-    "        args={'solver': 'lbfgs', 'alpha': 1e-5, 'hidden_layer_sizes': (5,2), 'random_state': 1}\n",
+    "        args={'solver': 'sgd', 'activation':'logistic', 'alpha': 1e-5, 'hidden_layer_sizes': (6,4,2), 'random_state': 52}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='NN using stochastic gradient descent and logistic activation with large ∆',\n",
+    "        X=X,\n",
+    "        y=y,\n",
+    "        algorithm=MLPClassifier,\n",
+    "        args={'solver': 'sgd', 'activation':'logistic', 'alpha': 10, 'hidden_layer_sizes': (6,4,2), 'random_state': 1245}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='NN using stochastic gradient descent and relu activation with small ∆',\n",
+    "        X=X,\n",
+    "        y=y,\n",
+    "        algorithm=MLPClassifier,\n",
+    "        args={'solver': 'sgd', 'activation':'relu', 'alpha': 1e-8, 'hidden_layer_sizes': (5,2), 'random_state': 734}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='NN using stochastic gradient descent and relu activation with large ∆',\n",
+    "        X=X,\n",
+    "        y=y,\n",
+    "        algorithm=MLPClassifier,\n",
+    "        args={'solver': 'sgd', 'activation':'relu', 'alpha': 1, 'hidden_layer_sizes': (5,2), 'random_state': 734}\n",
     "    )\n",
     "]\n",
     "\n",
-    "for test in nn_basic_tests:\n",
+    "for test in nn_sgd_tests:\n",
     "    test.run()\n",
     "    test.display()"
    ]
+  },
+  {
+   "source": [
+    "lambdas = [\n",
+    "    1e-4,\n",
+    "    1,\n",
+    "    1e2,\n",
+    "]\n",
+    "structures = [\n",
+    "    (4,3),\n",
+    "    (9,6),\n",
+    "    (9,6,3),\n",
+    "    (10,6),\n",
+    "    (10,8,6,4,2)\n",
+    "]\n",
+    "pairs = []\n",
+    "for structure in structures:\n",
+    "    for lmbda in lambdas:\n",
+    "        pairs.append((structure, lmbda))\n",
+    "\n",
+    "nn_logistic_tests = [\n",
+    "    Test(\n",
+    "        name=f'NN with hidden layers of {structure} and with lmbda of {lmbda} and with activation of logistic function',\n",
+    "        X=X,\n",
+    "        y=y,\n",
+    "        algorithm=MLPClassifier,\n",
+    "        args={\n",
+    "            'solver': 'lbfgs',\n",
+    "            'alpha': lmbda,\n",
+    "            'activation': 'logistic',\n",
+    "            'hidden_layer_sizes': structure,\n",
+    "            'random_state': 1\n",
+    "        }\n",
+    "    )\n",
+    "    for (structure, lmbda) in pairs\n",
+    "]\n",
+    "\n",
+    "for test in nn_logistic_tests:\n",
+    "    test.run()\n",
+    "    test.display()"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -589,29 +647,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO:\n",
-    "#weight init\n",
-    "#regularization and lambda\n",
-    "#activation\n",
-    "nn_layer_tests = [\n",
+    "pairs = []\n",
+    "lambdas = [\n",
+    "    1e-4,\n",
+    "    1,\n",
+    "    1e2,\n",
+    "]\n",
+    "random_weights = [i*17 for i in range(1,7)]\n",
+    "\n",
+    "structure = (4,3) #best results in previous demo\n",
+    "\n",
+    "for rw in random_weights:\n",
+    "    for lmbda in lambdas:\n",
+    "        pairs.append((rw,lmbda))\n",
+    "\n",
+    "nn_relu_tests = [\n",
     "    Test(\n",
-    "        name=f'NN with hidden layers {structure}',\n",
+    "        name=f'NN with hidden layers = {structure}; lmbda = {lmbda}; random weight seed = {rw}; activation = relu',\n",
     "        X=X,\n",
     "        y=y,\n",
     "        algorithm=MLPClassifier,\n",
-    "        args={'solver': 'lbfgs', 'alpha': 1e-5, 'hidden_layer_sizes': structure, 'random_state': 1}\n",
+    "        args={\n",
+    "            'solver': 'lbfgs',\n",
+    "            'alpha': lmbda,\n",
+    "            'activation': 'relu',\n",
+    "            'hidden_layer_sizes': structure,\n",
+    "            'random_state': rw\n",
+    "        }\n",
     "    )\n",
-    "    for structure in [\n",
-    "        (6,4),\n",
-    "        (6,4,2),\n",
-    "        (10,8),\n",
-    "        (10,8,6),\n",
-    "        (10,8,6,4),\n",
-    "        (20,16,10,8),\n",
-    "    ]\n",
+    "    for (rw, lmbda) in pairs\n",
     "]\n",
     "\n",
-    "for test in nn_layer_tests:\n",
+    "for test in nn_relu_tests:\n",
     "    test.run()\n",
     "    test.display()"
    ]
