--- a/model-selection.ipynb
+++ b/model-selection.ipynb
@@ -23,12 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ea90a94a94b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline "
    ]
   },
   {
@@ -371,10 +385,7 @@
     "        prediction = self.get_best_prediction()\n",
     "        print(f'Mean prediction: {np.round(np.mean(np.array(prediction)), 2)}')\n",
     "        print(f'Training accuracy: {acc_train}')\n",
-    "        print(f'Test accuracy: {acc_test}')\n",
-    "    \n",
-    "    def plot(self):\n",
-    "        pass"
+    "        print(f'Test accuracy: {acc_test}')"
    ]
   },
   {
@@ -404,7 +415,7 @@
     "        algorithm=svm.SVC,\n",
     "        args={'kernel': 'linear', 'C': i}\n",
     "    )\n",
-    "    for i in [0.001, 0.01, 0.1, 1.0/len(X), 1, 10]\n",
+    "    for i in [0.001, 0.01, 0.1, 1, 10]\n",
     "]\n",
     "\n",
     "for test in svm_linear_tests:\n",
@@ -426,12 +437,23 @@
     "        algorithm=svm.SVC,\n",
     "        args={'kernel': 'rbf', 'C': i}\n",
     "    )\n",
-    "    for i in [0.001, 0.01, 0.1, 1.0/len(X), 1, 10]\n",
+    "    for i in [0.001, 0.01, 0.1, 1, 10]\n",
     "]\n",
+    "\n",
+    "svm_rbf_acc_train = [] \n",
+    "svm_rbf_acc_test = []\n",
+    "svm_rbf_c = []\n",
     "\n",
     "for test in svm_rbf_tests:\n",
     "    test.run()\n",
-    "    test.display()"
+    "    test.display()\n",
+    "\n",
+    "\n",
+    "print(\"plot of how accuracy changes on the single parameter C\")\n",
+    "plt.title('Accuracy vs C')\n",
+    "plt.plot(svm_rbf_c,svm_rbf_acc_train)\n",
+    "plt.plot(svm_rbf_c,svm_rbf_acc_test)\n",
+    "plt.legend(['Training Accuracy', 'Test Accuracy'], loc='lower right')"
    ],
    "cell_type": "code",
    "metadata": {},
@@ -442,7 +464,7 @@
    "source": [
     "pairs = []\n",
     "for degree in range(1,6):\n",
-    "    for C in [0.01, 0.1, 1.0/len(X), 1]:\n",
+    "    for C in [0.01, 0.1, 1]:\n",
     "        pairs.append((degree, C))\n",
     "\n",
     "svm_poly_tests = [\n",
