--- a/model-selection.ipynb
+++ b/model-selection.ipynb
@@ -23,21 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-ea90a94a94b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -322,7 +310,7 @@
     "            raise Exception('test has not yet been run')\n",
     "        return list(self.accs_train)\n",
     "\n",
-    "    def get_best_accuracy_training(self):\n",
+    "    def get_accuracy_training(self):\n",
     "        return self.get_training_accuracies()[self.best_acc_index]\n",
     "\n",
     "    def get_testing_accuracies(self):\n",
@@ -330,7 +318,7 @@
     "            raise Exception('test has not yet been run')\n",
     "        return list(self.accs_test)\n",
     "    \n",
-    "    def get_best_accuracy(self):\n",
+    "    def get_accuracy(self):\n",
     "        return self.get_testing_accuracies()[self.best_acc_index]\n",
     "\n",
     "    def get_predictions(self):\n",
@@ -380,8 +368,8 @@
     "    \n",
     "    def display(self):\n",
     "        print(f'\\n\\n{self.name}\\n' + '='*len(self.name))\n",
-    "        acc_train = self.get_best_accuracy_training()\n",
-    "        acc_test = self.get_best_accuracy()\n",
+    "        acc_train = self.get_accuracy_training()\n",
+    "        acc_test = self.get_accuracy()\n",
     "        prediction = self.get_best_prediction()\n",
     "        print(f'Mean prediction: {np.round(np.mean(np.array(prediction)), 2)}')\n",
     "        print(f'Training accuracy: {acc_train}')\n",
@@ -418,6 +406,7 @@
     "    for i in [0.001, 0.01, 0.1, 1, 10]\n",
     "]\n",
     "\n",
+    "# run tests\n",
     "for test in svm_linear_tests:\n",
     "    test.run()\n",
     "    test.display()"
@@ -440,6 +429,8 @@
     "    for i in [0.001, 0.01, 0.1, 1, 10]\n",
     "]\n",
     "\n",
+    "\n",
+    "#run tests while recording values to plot\n",
     "svm_rbf_acc_train = [] \n",
     "svm_rbf_acc_test = []\n",
     "svm_rbf_c = []\n",
@@ -447,6 +438,9 @@
     "for test in svm_rbf_tests:\n",
     "    test.run()\n",
     "    test.display()\n",
+    "    svm_rbf_c.append(test.get_args()['C'])\n",
+    "    svm_rbf_acc_train.append(test.get_accuracy_training())\n",
+    "    svm_rbf_acc_test.append(test.get_accuracy())\n",
     "\n",
     "\n",
     "print(\"plot of how accuracy changes on the single parameter C\")\n",
@@ -550,12 +544,32 @@
     "        algorithm=linear_model.LogisticRegression,\n",
     "        args={'penalty':'l2', 'solver':'saga', 'C':i}\n",
     "    )\n",
-    "    for i in [0.0001, 0.001, 0.01, 0.1, 1, 10, 100, 1000]\n",
+    "    for i in [0.0001]#, 0.001, 0.01, 0.1, 1, 10, 100, 1000]\n",
     "]\n",
     "\n",
+    "\n",
+    "best_model = None\n",
+    "best_accuracy = 0\n",
     "for test in logreg_l2_tests:\n",
     "    test.run()\n",
-    "    test.display()"
+    "    test.display()\n",
+    "    accuracy = test.get_accuracy()\n",
+    "    if accuracy > best_accuracy:\n",
+    "        best_accuracy = accuracy\n",
+    "        best_model = test.get_model()\n",
+    "\n",
+    "print('\\n')\n",
+    "plt.figure(figsize=(20,7))\n",
+    "plt.title('coefficient of each dimension')\n",
+    "plt.scatter(\n",
+    "    df_final.columns[1:].tolist(),  #'1:' to avoid the target variable\n",
+    "    best_model.coef_.ravel().tolist()\n",
+    ")\n",
+    "plt.tick_params(axis='x', rotation = 90)\n",
+    "plt.xlabel('dimension')\n",
+    "plt.ylabel('coefficient')\n",
+    "plt.plot([0,len(best_model.coef_.ravel().tolist())],[0,0],c='red')\n",
+    "plt.show()"
    ]
   },
   {
